# rPPG_ROS

./: .gitmodules  Dockerfile_Humble  Dockerfile_Jazzy  LICENSE  README.md  requirements.txt
rppg_ws/install/: local_setup.sh  setup.bash  setup.sh
rppg_ws/install/rppg_node/lib/rppg_node/: system_monitor
rppg_ws/install/rppg_node/share/rppg_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
rppg_ws/log/: latest_build
rppg_ws/src/rppg_node/: setup.py
rppg_ws/src/rppg_node/config/: rppg_run_params.yaml  webcam_params.yaml
rppg_ws/src/rppg_node/launch/: rppg_pipeline.launch.py  rppg_pipeline_video.launch.py
rppg_ws/src/rppg_node/rppg_node/: rppg_toolbox_node_run.py  webcam_reader.py
rppg_ws/src/rppg_node/utils/: face_roi_detection.py  rppg_utils.py  utils.py
ws_dis/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
ws_dis/install/rppg_interfaces/share/rppg_interfaces/: package.bash  package.zsh
ws_dis/install/rppg_node/lib/rppg_node/: rppg_node  rppg_toolbox_node_run  rppg_toolbox_node_run = rppg_node.rppg_toolbox_node_run:mainrppg_toolbox_video_node  rppg_toolbox_node_run_nn  rppg_toolbox_video_node  webcam_reader
ws_dis/install/rppg_node/share/rppg_node/: package.sh
ws_dis/log/: latest_build  latest_list
ws_dis/src/rppg_node/: package.xml  setup.cfg  setup.py
ws_dis/src/rppg_node/config/: webcam_params.yaml
ws_dis/src/rppg_node/processing/: face_roi_detection.py
ws_dis/src/rppg_node/rppg_node/: rppg_toolbox_nn_node.py  rppg_toolbox_node.py  webcam_reader.py
ws_dis/src/rppg_node/utils/: rppg_utils.py  utils.py
(+7 files in other folders)
