[develop]
script_dir=$base/lib/rppg_node
[install]
install_scripts=$base/lib/rppg_node

[options]
packages = find:
zip_safe = true
include_package_data = true

[options.package_data]
* = msg/*.msg

[build-system]
requires = 
    setuptools>=42
    setuptools_scm>=3.4
    rosidl_default_generators
build-backend = setuptools.build_meta